src/objects/Engaged_Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Engaged Organisations</relationshipLabel>
        <relationshipName>Engaged_Organisations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engagement_Level__c</fullName>
        <label>Engagement Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial enquiry</fullName>
                </value>
                <value>
                    <fullName>Engagement with a view to involve them</fullName>
                </value>
                <value>
                    <fullName>Formally engaged with them and have a contract to procure them</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Contact__c</fullName>
        <label>Name of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Role__c</fullName>
        <label>Organisation Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service provider</fullName>
                </value>
                <value>
                    <fullName>Manager of the SIB</fullName>
                </value>
                <value>
                    <fullName>Technical support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation_Type__c</fullName>
        <label>Organisation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VCSE or another service provider</fullName>
                </value>
                <value>
                    <fullName>External advisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Engaged Organisation</label>
    <nameField>
        <displayFormat>EO-{0000000}</displayFormat>
        <label>Engaged Organisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engaged Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>